welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:7: error: not found: value -
		case - => return false
                     ^